# Quickie

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  dox.config  run_unix.sh  setup.sh
html/: _geographic_coordinate_8h_source.html  _trip_8h_source.html  _trip_factory_8h_source.html  _uber_api_implementation_8h_source.html  _uber_api_interface_8h_source.html  _uber_trip_8h_source.html  _user_8h_source.html  _user_factory_8h_source.html  _user_http_request_8h_source.html  annotated.html  class_geographic_coordinate-members.html  class_geographic_coordinate.html  class_trip-members.html  class_trip.html  class_trip_factory-members.html  class_trip_factory.html  class_uber_api_implementation-members.html  class_uber_api_implementation.html  class_uber_api_interface-members.html  class_uber_api_interface.html  class_uber_trip-members.html  class_uber_trip.html  class_user-members.html  class_user.html  class_user_factory-members.html  class_user_factory.html  class_user_http_request-members.html  class_user_http_request.html  classes.html  dir_28e86e5349528405fa47c50d6a25fbab.html  dir_33184d9f279d0a35335ee75c08157afa.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9761b53e3d9349800c0cb59b71c8cd3d.html  dir_b132364f2eb4d0520a0851472546d1de.html  dir_cab694c3d106f0550c8829c9bcd0a4b9.html  dir_f69c592a13d7436c47dd174a6e8e327c.html  files.html  functions.html  functions_func.html  functions_vars.html  (+12 more)
latex/: annotated.tex  class_geographic_coordinate.tex  class_trip 2.eps  class_trip.tex  class_trip_factory.tex  class_uber_api_implementation 2.eps  class_uber_api_implementation.tex  class_uber_api_interface.eps  class_uber_api_interface.tex  class_uber_trip.eps  class_uber_trip.tex  class_user.tex  class_user_factory.tex  class_user_http_request.tex  hierarchy 2.tex  md__r_e_a_d_m_e.tex  namespaces.tex  (+4 more)
(+79 files in other folders)
